--- a/src/app.scss
+++ b/src/app.scss
@@ -26,12 +26,14 @@ $mainTextColor: white;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  text-align: center;
   border: 1px solid $mainColor;
   border-radius: 8px;
   padding: 1em;
   flex: 1 1 auto;
   width: 200px;
-  height: 200px;
+  height: 250px;
+  gap: 5px;
 
   button {
     border-radius: 8px;
